// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestCase#3 :Progress Component Rendering tests TestCase#3 -2 : Snapshot Test should render initial layout 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-sm"
        >
          <span
            data-testid="progress-displa"
            style={
              Object {
                "color": undefined,
              }
            }
          />
        </div>
        <div
          className="col-sm"
        >
          <div
            className="progress"
          >
            <span
              data-testid="progress-display"
            >
              <div
                aria-valuemax={100}
                aria-valuemin="0"
                aria-valuenow={0}
                className="progress-bar"
                role="progressbar"
                style={
                  Object {
                    "width": "0%",
                  }
                }
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`TestCase#4 : Test Button click event it works 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-sm"
    >
      <span
        className="default"
        style={
          Object {
            "color": undefined,
          }
        }
      >
        <h1>
           Button Test 
        </h1>
        <button>
           
           
        </button>
         
        <br />
        <button
          className="btn btn-outline-primary btn-block btn-lg"
          disabled={false}
          type="button"
        >
           
           
        </button>
      </span>
    </div>
  </div>
</div>
`;
